disunity-derive/tests/10-misspelled-variant-attribute.stderr
error: expected discriminant = N inside of disunity attribute
 --> tests/10-misspelled-variant-attribute.rs:5:16
  |
5 |     #[disunity(misspelled = 3)]
  |                ^^^^^^^^^^^^^^
